[package]
name = "bevy_doryen"
version = "0.1.1"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
description = "A Bevy plugin that integrates the Doryen roguelike library with Bevy"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alexschrod/bevy_doryen"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "8a9f475edb51ea45c976c000113ca55bac751f96" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "8a9f475edb51ea45c976c000113ca55bac751f96" }
# doryen
doryen-rs = "1.2.3"

[dev-dependencies]
unicode-segmentation = "1.7"
