[package]
name = "bevy_doryen"
version = "0.3.0"
edition = "2021"
description = "A Bevy plugin that integrates the Doryen roguelike library with Bevy"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alexschrod/bevy_doryen"
readme = "README.md"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
exclude = ["/www/", "/demo_thumbnails/", "/example_runner/", "/.github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy
bevy_app = { version = "0.11" }
bevy_ecs = { version = "0.11" }
bevy_utils = { version = "0.11" }
# doryen
doryen-rs = "1.3.0"

[dev-dependencies]
unicode-segmentation = "1.10"

# Enable high optimizations for dependencies, but not for our code
# (Makes examples run better)
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["example_runner"]
